Establish the relation and add rest controller to find jobs in a company